test_suite/tests/compile-fail/type-attribute/type_attribute_fail_into.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)] //~ ERROR: proc-macro derive panicked
#[serde(into="")]
enum TestOne {
    Testing,
    One,
    Two,
    Three,
}
